--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -43,17 +43,17 @@
                 </h1>
             </div>
             <nav class="navbar_menu">
-                <a class="navbar_link about_link" href="#about">SOBRE MIM</a>
+                <a class="navbar_link about_link" href="#about">ABOUT ME</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link tourism_link" href="#tourism">TURISMO</a>
+                <a class="navbar_link tourism_link" href="#tourism">TOURISM</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link events_link" href="#events">EVENTOS</a>
+                <a class="navbar_link events_link" href="#events">EVENTS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link business_link" href="#business">NEGÓCIOS</a>
+                <a class="navbar_link business_link" href="#business">BUSINESS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link agency_link" href="#agency">AGÊNCIAS</a>
+                <a class="navbar_link agency_link" href="#agency">AGENCIES</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link contact_link" href="#contact">CONTATO</a>
+                <a class="navbar_link contact_link" href="#contact">CONTACT</a>
             </nav>
         </div>
         <header class="hero bg--red-wine">
@@ -66,7 +66,7 @@
                 </video>
             </div>
             <div class="hero_slogan">
-                <h2 class="hero_title">DESCUBRIR <span class="fw_bold">MENDOZA</span></h2>
+                <h2 class="hero_title">DISCOVER <span class="fw_bold">MENDOZA</span></h2>
             </div>
         </header>
         <section id="about" class="section_v">
@@ -75,8 +75,8 @@
                     <div class="section_lettering">
                         <img src="../../img/lettering.png" alt="Phrase 'I am Carla Ribeiro' written in cursive.">
                     </div>
-                    <h3 class="section_subtitle">&laquo;Organizadora de Eventos e Turismo&raquo;</h3>
-                    <p class="section_text text--hug">Me dedico a organizar experiências únicas e especiais em Mendoza. Quer viajar por turismo, celebrar um evento especial, ou por negócios? Organizo a sua vinda a Mendoza sob medida, do princípio ao fim, com dicas de todas as atividades que existe em cada estação do ano. Sou uma <span class="fw_bold">Mendoza Lover</span> e gostaria que todos os visitantes se apaixonem por esse destino tão especial que é Mendoza.</p>
+                    <h3 class="section_subtitle">&laquo;Travel & Event Planner&raquo;</h3>
+                    <p class="section_text text--hug">I organize unique experiences in Mendoza. Would you like to visit Mendoza on holiday, to celebrate a special event or for a business trip? I will advise you on the best activities that Mendoza offers and I will design a personalized itinerary for you. I am a <span class="fw_bold">Mendoza Lover</span> and I would like all visitors to fall in love with this special destination.</p>
                 </article>
                 <figure class="section_img_container">
                     <img class="section_img" src="../../img/about.jpg" alt="Photograph of Carla Ribeiro drinking a glass of wine with an impressive landscape in the background.">
@@ -89,14 +89,14 @@
                     <img class="section_img" src="../../img/tourism.jpg" alt="Photograph showing a glass of red wine in the foreground, and a landscape of vineyards and mountains in the background.">
                 </figure>
                 <article class="section_article">
-                    <h3 class="section_title">QUER PASSAR AS <span class="fw_bold">FÉRIAS</span> DOS SEUS SONHOS EM <span class="fw_bold">MENDOZA?</span></h3>
-                    <p class="section_text">Seja qual for a sua preferência, aventura, relaxar, Cidade ou Natureza, te proporcionarei uma viagem personalizada. Planificarei as suas atividades, alojamentos, transportes, dicas dos melhores lugares para jantar, eventos na Cidade, os melhores lugares para comprar vinhos, lojas de presentes, couro, etc. Sua única preocupação é em fazer as malas e desfrutar desta bela cidade, conhecida como a Terra do Sol e do vinho.</p>
+                    <h3 class="section_title">DREAM <span class="fw_bold">HOLIDAYS</span> IN <span class="fw_bold">MENDOZA?</span></h3>
+                    <p class="section_text">Whether you prefer adventure, relax, city or nature; I will design and guide you on your dream holiday. I will take care of booking activities, tours, accommodation, transport, restaurants, best places to buy wine, etc. All you have to do is pack your bags to enjoy this beautiful land of sun and wine.</p>
                 </article>
             </div>
             <div class="section_actions">
                 <button class="section_btn btn--dark">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>ACTIVITIES IN MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -105,8 +105,8 @@
         <section id="events" class="section_h">
             <div class="section_wrapper">
                 <article class="section_article">
-                    <h3 class="section_title">QUER CELEBRAR UM <span class="fw_bold">EVENTO</span> ESPECIAL EM <span class="fw_bold">MENDOZA?</span></h3>
-                    <p class="section_text">Organizamos uma viagem inesquecível para você e seus convidados. Planificarei alojamentos, transportes, tudo para o respectivo evento e atividades em tempo livre. Celebramos casamentos, dia da noiva, lua de mel, aniversários, pedidos de casamento, renovação de votos, despedidas de solteiro.</p>
+                    <h3 class="section_title">CELEBRATE A SPECIAL <span class="fw_bold">EVENT</span> IN <span class="fw_bold">MENDOZA?</span></h3>
+                    <p class="section_text">I will create an unforgettable trip for you and your guests. I will take care of organizing accommodation, transport, everything related to the event and booking your favorite tours/activities. Celebrate weddings, birthdays, vows renewals, anniversaries, bachelor parties, honeymoons, engagement proposals.</p>
                 </article>
                 <div class="section_imgs_container">
                     <figure class="section_img_container img--01">
@@ -123,7 +123,7 @@
             <div class="section_actions">
                 <button class="section_btn btn--dark">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>ACTIVITIES IN MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -132,12 +132,12 @@
         <section id="business" class="section_v bg--red-wine">
             <div class="section_wrapper">
                 <article class="section_article article--left">
-                    <h3 class="section_title">QUER ORGANIZAR UM <span class="fw_bold">EVENTO CORPORATIVO</span> PARA SUA EMPRESA EM <span class="fw_bold">MENDOZA?</span></h3>
-                    <p class="section_text">Planificamos experiências personalizadas, de acordo com cada perfil corporativo, combinando trabalho com prazer. Organizamos desde alojamento, transporte, tudo a respeito a reuniões, conferências e atividades turísticas em tempo livre.</p>
+                    <h3 class="section_title"><span class="fw_bold">CORPORATE EVENT</span> FOR YOUR COMPANY IN <span class="fw_bold">MENDOZA?</span></h3>
+                    <p class="section_text">I will plan an experience that combines work and pleasure according to your company profile. I will take care of organizing accommodation, transport, everything related to meetings-conferences and booking activities for your free time.</p>
                     <div class="section_actions actions--desktop">
                         <button class="section_btn btn--light">
                             <a href="mendoza.html">
-                                <span>O QUE MENDOZA OFERECE</span>
+                                <span>ACTIVITIES IN MENDOZA</span>
                                 <span class="section_icon fa-solid fa-chevron-right"></span>
                             </a>
                         </button>
@@ -150,7 +150,7 @@
             <div class="section_actions actions--mobile">
                 <button class="section_btn btn--light">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>ACTIVITIES IN MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -162,12 +162,12 @@
                     <img class="section_img" src="../../img/agencies.png" alt="Photograph of a wooden sign in the shape of an arrow, pointing to the right, with the word 'Mendoza', located on the trunk of a tree, and with a landscape in the background.">
                 </figure>
                 <article class="section_article article--right">
-                    <h3 class="section_title">VOCÊ É UMA <span class="fw_bold">AGÊNCIA</span> DE <span class="fw_bold">TURISMO</span>?</h3>
-                    <p class="section_text">Trabalharemos em conjunto para brindar experiências inesquecíveis a seus clientes. Serei a sua anfitriã em Mendoza, planificando e acompanhando cada detalhe da sua viagem. Entre em contato para conhecer os variados serviços e tarifas especiais para operadores, agencias de viagem e consultores.</p>
+                    <h3 class="section_title">ARE YOU A <span class="fw_bold">TOURISM AGENCY?</span></h3>
+                    <p class="section_text">Let's work together to offer a unique experience to your customers. Your clients will be my guests in Mendoza, I will plan and guide their entire stay. Contact me to find out about special rates for agencies, operators and consultants.</p>
                     <div class="section_actions actions--desktop">
                         <button class="section_btn btn--dark">
                             <a href="mendoza.html">
-                                <span>O QUE MENDOZA OFERECE</span>
+                                <span>ACTIVITIES IN MENDOZA</span>
                                 <span class="section_icon fa-solid fa-chevron-right"></span>
                             </a>
                         </button>
@@ -177,7 +177,7 @@
             <div class="section_actions actions--mobile">
                 <button class="section_btn btn--dark">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>ACTIVITIES IN MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -188,13 +188,13 @@
                 <button class="contact_btn">
                     <a href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
                         <span class="contact_icon fa-brands fa-whatsapp"></span>
-                        <span class="contact_label">CONSULTAS</span>
+                        <span class="contact_label">CONTACT ME</span>
                     </a>
                 </button>
                 <button class="contact_btn">
                     <a href="https://www.instagram.com/mendozalovers_by_carlaribeiro/" target="_blank">
                         <span class="contact_icon fa-brands fa-instagram"></span>
-                        <span class="contact_label">SIGA-NOS</span>
+                        <span class="contact_label">FOLLOW US</span>
                     </a>
                 </button>
             </div>
@@ -202,13 +202,13 @@
                 <button class="contact_btn">
                     <a href="https://forms.gle/Higya9XgeHs5SwJ37" target="_blank">
                         <span class="contact_icon fa-solid fa-file-circle-check"></span>
-                        <span class="contact_label">COTAÇÃO</span>
+                        <span class="contact_label">QUOTE</span>
                     </a>
                 </button>
                 <button class="contact_btn">
                     <a href="https://goo.gl/maps/SxR3NPf53ympUjNk6/" target="_blank">
                         <span class="contact_icon fa-solid fa-store"></span>
-                        <span class="contact_label">AVALIAÇÕES</span>
+                        <span class="contact_label">REVIEWS</span>
                     </a>
                 </button>
             </div>
@@ -219,7 +219,7 @@
     </div>
 
     <div class="whatsapp">
-        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
+        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Hello!" target="_blank">
             <img class="whatsapp_img" src="../../img/whatsapp.png" alt="Whatsapp icon">
         </a>
     </div>
