--- a/lang/en/mendoza.html
+++ b/lang/en/mendoza.html
@@ -20,7 +20,7 @@
                 <button class="navbar_btn">
                     <a href="http://www.mendozalovers.com/lang/en">
                         <span class="fa-solid fa-chevron-left"></span>
-                        <span class="navbar_label">Retorna</span>
+                        <span class="navbar_label">Back</span>
                     </a>
                </button>
             </div>
@@ -32,29 +32,29 @@
                 </h1>
             </div>
             <nav class="navbar_menu menu--muted">
-                <a class="navbar_link about_link" href="#about">SOBRE MIM</a>
+                <a class="navbar_link about_link" href="#about">ABOUT ME</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link tourism_link" href="#tourism">TURISMO</a>
+                <a class="navbar_link tourism_link" href="#tourism">TOURISM</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link events_link" href="#events">EVENTOS</a>
+                <a class="navbar_link events_link" href="#events">EVENTS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link business_link" href="#business">NEGÓCIOS</a>
+                <a class="navbar_link business_link" href="#business">BUSINESS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link agency_link" href="#agency">AGÊNCIAS</a>
+                <a class="navbar_link agency_link" href="#agency">AGENCIES</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link contact_link" href="#contact">CONTATO</a>
+                <a class="navbar_link contact_link" href="#contact">CONTACT</a>
             </nav>
         </div>
 
         <header class="mendoza bg--camel">
-            <h2 class="mendoza_title">O QUE OFERECE MENDOZA?</h2>
-            <p class="mendoza_text">Um <span class="fw_bold">destino único</span> por suas paisagens sonhadas <span class="fw_bold">de janeiro a janeiro.</span> Desde o sol brilhante sobre os vinhedos até os picos nevados da Codilheira dos Andes, <span class="fw_bold">Mendoza nos convida para desfrutá-la em todas as estações</span> e viver experiencias inesquecíveis.</p>
+            <h2 class="mendoza_title">MENDOZA OFFERS</h2>
+            <p class="mendoza_text">Dream landscapes throughout the year. From the bright sun over the vineyards to the snowy peaks of the Andes, it invites us to <span class="fw_bold">enjoy all its seasons</span> and live unforgettable experiences.</p>
         </header>
 
         <section class="section_h bg--red-wine">
             <article class="section_article">
-                <h3 class="section_title">VINHO</h3>
-                <p class="section_text fw_bold">Visitas a Grandes Vinícolas // Vinícolas Boutique // Cavalgada entre Vinhedos // Bicicleta entre vinhedos // Dia de Colheita.</p>
+                <h3 class="section_title">WINE</h3>
+                <p class="section_text fw_bold">Visits to Big Wineries and Boutique Wineries // Bike through vineyards // Horseriding through vineyards // Harvest day.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" src="../../img/wine.jpg" alt="Photographic collage that shows three representative images of the Mendoza wineries, and the different activities that can be carried out there.">
@@ -63,8 +63,8 @@
 
         <section class="section_h">
             <article class="section_article">
-                <h3 class="section_title">AVENTURA</h3>
-                <p class="section_text fw_bold">Trekking // Cavalgadas // Rapel // Arvorismo // Passeio de Veleiro // Expedição Aconcagua // Rafting // Voo de Helicóptero // Balão // Ski // Paraquedismo.</p>
+                <h3 class="section_title">ADVENTURE</h3>
+                <p class="section_text fw_bold">Mountain Trekking // Horseback Riding // Rappelling // Aconcagua Expedition // Rafting // Sailboat ride // Fly in Helicopter or Hot Air Balloon // Ski // Skydiving.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" class="adventure-img" src="../../img/adventure.jpg" alt="Photographic collage that shows three representative images of the adventure tourism activities that can be done in Mendoza, such as mountain walks, skiing and rafting.">
@@ -73,8 +73,8 @@
 
         <section class="section_h bg--camel">
             <article class="section_article">
-                <h3 class="section_title">GASTRONOMIA</h3>
-                <p class="section_text fw_bold">Gastronomia em Vinícolas // Olivícolas // Restaurantes Gourmet // Restaurantes Luxuosos // Restaurantes Tradicionais.</p>
+                <h3 class="section_title">GASTRONOMY</h3>
+                <p class="section_text fw_bold">Restaurants in Wineries, Mountain and Olivicolas // Gourmet Restaurants // Luxury Restaurants // Tradicional Restaurants.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" src="../../img/gastronomy.jpg" alt="Photographic collage that shows three representative images of the Mendoza gastronomic offer.">
@@ -83,8 +83,8 @@
 
         <section class="section_h">
             <article class="section_article">
-                <h3 class="section_title">EXPERIÊNCIAS</h3>
-                <p class="section_text fw_bold">Spa days // Aguas Termais // Eventos Culturales // Circuitos de Compras // Dia da Noiva // Hospedagens Especiais: Hotéis 5 estrelas - Pousadas Boutique- Alojamentos Entre Vinhedos – Alojamento e Montanhas.</p>
+                <h3 class="section_title">EXPERIENCES</h3>
+                <p class="section_text fw_bold">Spa days // Hot Springs // Cultural Events // Shopping Tours // Bridal Day // Special Accommodations: Luxurious Hotels - Boutique Inns - Accommodation Between Vineyards and Mountains.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" src="../../img/experiences.jpg" alt="Photographic collage that shows three representative images of the experiences offered by Mendoza.">
@@ -97,7 +97,7 @@
     </div>    
 
     <div class="whatsapp">
-        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
+        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Hello!" target="_blank">
             <img class="whatsapp_img" src="../../img/whatsapp.png" alt="Whatsapp icon">
         </a>
     </div>
