--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -43,17 +43,17 @@
                 </h1>
             </div>
             <nav class="navbar_menu">
-                <a class="navbar_link about_link" href="#about">SOBRE MIM</a>
+                <a class="navbar_link about_link" href="#about">SOBRE MÍ</a>
                 <span class="divider-h">|</span>
                 <a class="navbar_link tourism_link" href="#tourism">TURISMO</a>
                 <span class="divider-h">|</span>
                 <a class="navbar_link events_link" href="#events">EVENTOS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link business_link" href="#business">NEGÓCIOS</a>
+                <a class="navbar_link business_link" href="#business">NEGOCIOS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link agency_link" href="#agency">AGÊNCIAS</a>
+                <a class="navbar_link agency_link" href="#agency">AGENCIAS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link contact_link" href="#contact">CONTATO</a>
+                <a class="navbar_link contact_link" href="#contact">CONTACTO</a>
             </nav>
         </div>
         <header class="hero bg--red-wine">
@@ -66,7 +66,7 @@
                 </video>
             </div>
             <div class="hero_slogan">
-                <h2 class="hero_title">DESCUBRIR <span class="fw_bold">MENDOZA</span></h2>
+                <h2 class="hero_title">DESCUBRÍ <span class="fw_bold">MENDOZA</span></h2>
             </div>
         </header>
         <section id="about" class="section_v">
@@ -75,8 +75,8 @@
                     <div class="section_lettering">
                         <img src="../../img/lettering.png" alt="Frase 'Soy Carla Ribeiro' escrita en cursiva.">
                     </div>
-                    <h3 class="section_subtitle">&laquo;Organizadora de Eventos e Turismo&raquo;</h3>
-                    <p class="section_text text--hug">Me dedico a organizar experiências únicas e especiais em Mendoza. Quer viajar por turismo, celebrar um evento especial, ou por negócios? Organizo a sua vinda a Mendoza sob medida, do princípio ao fim, com dicas de todas as atividades que existe em cada estação do ano. Sou uma <span class="fw_bold">Mendoza Lover</span> e gostaria que todos os visitantes se apaixonem por esse destino tão especial que é Mendoza.</p>
+                    <h3 class="section_subtitle">&laquo;Travel & Event Planner&raquo;</h3>
+                    <p class="section_text text--hug">Me dedico a organizar experiencias únicas en Mendoza ¿Te gustaría viajar por turismo, celebrar un evento especial o por negocios? Diseñaré tu visita a medida, de principio a fin, asesorándote sobre todas las actividades que existen en cada estación del año. Soy una <span class="fw_bold">Mendoza Lover</span> y me gustaría que todos los visitantes se enamoren de este destino tan especial.</p>
                 </article>
                 <figure class="section_img_container">
                     <img class="section_img" src="../../img/about.jpg" alt="Fotografía de Carla Ribeiro bebiendo una copa de vino con un impresionante paisaje de fondo.">
@@ -89,14 +89,14 @@
                     <img class="section_img" src="../../img/tourism.jpg" alt="Fotografía que muestra una copa de vino tinto en primer plano, y un paisaje de viñedos y montañas en el fondo.">
                 </figure>
                 <article class="section_article">
-                    <h3 class="section_title">QUER PASSAR AS <span class="fw_bold">FÉRIAS</span> DOS SEUS SONHOS EM <span class="fw_bold">MENDOZA?</span></h3>
-                    <p class="section_text">Seja qual for a sua preferência, aventura, relaxar, Cidade ou Natureza, te proporcionarei uma viagem personalizada. Planificarei as suas atividades, alojamentos, transportes, dicas dos melhores lugares para jantar, eventos na Cidade, os melhores lugares para comprar vinhos, lojas de presentes, couro, etc. Sua única preocupação é em fazer as malas e desfrutar desta bela cidade, conhecida como a Terra do Sol e do vinho.</p>
+                    <h3 class="section_title">¿TE GUSTARÍA VIVIR UNAS <span class="fw_bold">VACACIONES</span> SOÑADAS EN <span class="fw_bold">MENDOZA?</span></h3>
+                    <p class="section_text">Ya sea que prefieras aventura, relax, ciudad o naturaleza diseñaré y te acompañaré en un viaje a medida de tus preferencias. Me encargaré de reservar actividades, alojamiento, transportes internos, consejos sobre los mejores lugares para cenar, comprar vino, eventos, etc. Solo tendrás que preparar las maletas para disfrutar de esta bella tierra de sol y vino.</p>
                 </article>
             </div>
             <div class="section_actions">
                 <button class="section_btn btn--dark">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>QUÉ OFRECE MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -105,8 +105,8 @@
         <section id="events" class="section_h">
             <div class="section_wrapper">
                 <article class="section_article">
-                    <h3 class="section_title">QUER CELEBRAR UM <span class="fw_bold">EVENTO</span> ESPECIAL EM <span class="fw_bold">MENDOZA?</span></h3>
-                    <p class="section_text">Organizamos uma viagem inesquecível para você e seus convidados. Planificarei alojamentos, transportes, tudo para o respectivo evento e atividades em tempo livre. Celebramos casamentos, dia da noiva, lua de mel, aniversários, pedidos de casamento, renovação de votos, despedidas de solteiro.</p>
+                    <h3 class="section_title">¿TE GUSTARÍA CELEBRAR UN <span class="fw_bold">EVENTO</span> ESPECIAL EN <span class="fw_bold">MENDOZA?</span></h3>
+                    <p class="section_text">Planificaré un viaje inolvidable para ti y tus invitados. Me encargaré de organizar alojamiento, transporte interno, todo lo respectivo al evento y actividades turísticas en tiempos libres. Celebra Bodas/ Cumpleaños/ Renovación de Votos/ Aniversarios/ Despedidas de soltero/ Luna de Miel/ Pedidos de Compromiso.</p>
                 </article>
                 <div class="section_imgs_container">
                     <figure class="section_img_container img--01">
@@ -123,7 +123,7 @@
             <div class="section_actions">
                 <button class="section_btn btn--dark">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>QUÉ OFRECE MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -132,12 +132,12 @@
         <section id="business" class="section_v bg--red-wine">
             <div class="section_wrapper">
                 <article class="section_article article--left">
-                    <h3 class="section_title">QUER ORGANIZAR UM <span class="fw_bold">EVENTO CORPORATIVO</span> PARA SUA EMPRESA EM <span class="fw_bold">MENDOZA?</span></h3>
-                    <p class="section_text">Planificamos experiências personalizadas, de acordo com cada perfil corporativo, combinando trabalho com prazer. Organizamos desde alojamento, transporte, tudo a respeito a reuniões, conferências e atividades turísticas em tempo livre.</p>
+                    <h3 class="section_title">¿TE GUSTARÍA ORGANIZAR UN <span class="fw_bold">EVENTO CORPORATIVO</span> PARA TU EMPRESA EN <span class="fw_bold">MENDOZA?</span></h3>
+                    <p class="section_text">Planificaré una experiencia única que combine trabajo y placer de acuerdo con tu perfil de empresa. Me encargaré de organizar alojamiento, transporte interno, todo lo respectivo a reuniones-conferencias y actividades turísticas en tiempos libres.</p>
                     <div class="section_actions actions--desktop">
                         <button class="section_btn btn--light">
                             <a href="mendoza.html">
-                                <span>O QUE MENDOZA OFERECE</span>
+                                <span>QUÉ OFRECE MENDOZA</span>
                                 <span class="section_icon fa-solid fa-chevron-right"></span>
                             </a>
                         </button>
@@ -150,7 +150,7 @@
             <div class="section_actions actions--mobile">
                 <button class="section_btn btn--light">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>QUÉ OFRECE MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -162,12 +162,12 @@
                     <img class="section_img" src="../../img/agencies.png" alt="Fotografía de un cartel de madera en forma de flecha, apuntando hacia la derecha, con la palabra 'Mendoza', situado sobre el tronco de un árbol, y con un paisaje de fondo.">
                 </figure>
                 <article class="section_article article--right">
-                    <h3 class="section_title">VOCÊ É UMA <span class="fw_bold">AGÊNCIA</span> DE <span class="fw_bold">TURISMO</span>?</h3>
-                    <p class="section_text">Trabalharemos em conjunto para brindar experiências inesquecíveis a seus clientes. Serei a sua anfitriã em Mendoza, planificando e acompanhando cada detalhe da sua viagem. Entre em contato para conhecer os variados serviços e tarifas especiais para operadores, agencias de viagem e consultores.</p>
+                    <h3 class="section_title">¿ERES UNA <span class="fw_bold">AGENCIA</span> DE <span class="fw_bold">TURISMO</span>?</h3>
+                    <p class="section_text">Trabajemos en conjunto para brindar una experiencia única a tus clientes. Seré su anfitriona en Mendoza planificando y acompañando la estadía de los pasajeros. Ponte en contacto conmigo para conocer los servicios y tarifas especiales para agencias, operadores y consultores.</p>
                     <div class="section_actions actions--desktop">
                         <button class="section_btn btn--dark">
                             <a href="mendoza.html">
-                                <span>O QUE MENDOZA OFERECE</span>
+                                <span>QUÉ OFRECE MENDOZA</span>
                                 <span class="section_icon fa-solid fa-chevron-right"></span>
                             </a>
                         </button>
@@ -177,7 +177,7 @@
             <div class="section_actions actions--mobile">
                 <button class="section_btn btn--dark">
                     <a href="mendoza.html">
-                        <span>O QUE MENDOZA OFERECE</span>
+                        <span>QUÉ OFRECE MENDOZA</span>
                         <span class="section_icon fa-solid fa-chevron-right"></span>
                     </a>
                 </button>
@@ -194,7 +194,7 @@
                 <button class="contact_btn">
                     <a href="https://www.instagram.com/mendozalovers_by_carlaribeiro/" target="_blank">
                         <span class="contact_icon fa-brands fa-instagram"></span>
-                        <span class="contact_label">SIGA-NOS</span>
+                        <span class="contact_label">SEGUINOS</span>
                     </a>
                 </button>
             </div>
@@ -202,13 +202,13 @@
                 <button class="contact_btn">
                     <a href="https://forms.gle/Higya9XgeHs5SwJ37" target="_blank">
                         <span class="contact_icon fa-solid fa-file-circle-check"></span>
-                        <span class="contact_label">COTAÇÃO</span>
+                        <span class="contact_label">COTACTO</span>
                     </a>
                 </button>
                 <button class="contact_btn">
                     <a href="https://goo.gl/maps/SxR3NPf53ympUjNk6/" target="_blank">
                         <span class="contact_icon fa-solid fa-store"></span>
-                        <span class="contact_label">AVALIAÇÕES</span>
+                        <span class="contact_label">RESEÑAS</span>
                     </a>
                 </button>
             </div>
@@ -219,7 +219,7 @@
     </div>
 
     <div class="whatsapp">
-        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
+        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Hola!" target="_blank">
             <img class="whatsapp_img" src="../../img/whatsapp.png" alt="Icono de Whatsapp">
         </a>
     </div>
