--- a/mendoza.html
+++ b/mendoza.html
@@ -84,7 +84,7 @@
         <section class="section_h">
             <article class="section_article">
                 <h3 class="section_title">EXPERIÊNCIAS</h3>
-                <p class="section_text fw_bold">Spa days // Aguas Termais // Eventos Culturales // Circuitos de Compras // Dia da Noiva // Hospedagens Especiais: Hotéis 5 estrelas - Pousadas Boutique- Alojamentos Entre Vinhedos – Alojamento e Montanhas.</p>
+                <p class="section_text fw_bold">Spa days // Aguas Termais // Eventos Culturales // Circuitos de Compras // Dia da Noiva // Hospedagens Especiais: Hotéis 5 estrelas - Pousadas Boutique - Alojamentos Entre Vinhedos - Alojamento e Montanhas.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" src="img/experiences.jpg" alt="Colagem fotográfica que mostra três imagens representativas das experiências que Mendoza oferece.">
