--- a/lang/es/mendoza.html
+++ b/lang/es/mendoza.html
@@ -20,7 +20,7 @@
                 <button class="navbar_btn">
                     <a href="http://www.mendozalovers.com/lang/es">
                         <span class="fa-solid fa-chevron-left"></span>
-                        <span class="navbar_label">Retorna</span>
+                        <span class="navbar_label">Volver</span>
                     </a>
                </button>
             </div>
@@ -32,29 +32,29 @@
                 </h1>
             </div>
             <nav class="navbar_menu menu--muted">
-                <a class="navbar_link about_link" href="#about">SOBRE MIM</a>
+                <a class="navbar_link about_link" href="#about">SOBRE MÍ</a>
                 <span class="divider-h">|</span>
                 <a class="navbar_link tourism_link" href="#tourism">TURISMO</a>
                 <span class="divider-h">|</span>
                 <a class="navbar_link events_link" href="#events">EVENTOS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link business_link" href="#business">NEGÓCIOS</a>
+                <a class="navbar_link business_link" href="#business">NEGOCIOS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link agency_link" href="#agency">AGÊNCIAS</a>
+                <a class="navbar_link agency_link" href="#agency">AGENCIAS</a>
                 <span class="divider-h">|</span>
-                <a class="navbar_link contact_link" href="#contact">CONTATO</a>
+                <a class="navbar_link contact_link" href="#contact">CONTACTO</a>
             </nav>
         </div>
 
         <header class="mendoza bg--camel">
-            <h2 class="mendoza_title">O QUE OFERECE MENDOZA?</h2>
-            <p class="mendoza_text">Um <span class="fw_bold">destino único</span> por suas paisagens sonhadas <span class="fw_bold">de janeiro a janeiro.</span> Desde o sol brilhante sobre os vinhedos até os picos nevados da Codilheira dos Andes, <span class="fw_bold">Mendoza nos convida para desfrutá-la em todas as estações</span> e viver experiencias inesquecíveis.</p>
+            <h2 class="mendoza_title">¿QUÉ OFRECE MENDOZA?</h2>
+            <p class="mendoza_text">Mendoza nos regala paisajes soñados <span class="fw_bold">durante todo el año.</span> Desde el sol brillante sobre los viñedos hasta las cumbres nevadas de Los Andes, nos invita a <span class="fw_bold">disfrutarla en todas sus estaciones</span> y vivir experiencias inolvidables.</p>
         </header>
 
         <section class="section_h bg--red-wine">
             <article class="section_article">
-                <h3 class="section_title">VINHO</h3>
-                <p class="section_text fw_bold">Visitas a Grandes Vinícolas // Vinícolas Boutique // Cavalgada entre Vinhedos // Bicicleta entre vinhedos // Dia de Colheita.</p>
+                <h3 class="section_title">VINO</h3>
+                <p class="section_text fw_bold">Visitas a Grandes Bodegas y Bodegas Boutique // Cabalgatas entre viñedos // Bicicletas entre viñedos // Día de Cosecha.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" src="../../img/wine.jpg" alt="Collage fotográfico que muestra tres imágenes representativas de las bodegas mendocinas, y las diferentes actividades que allí se pueden realizar.">
@@ -64,7 +64,7 @@
         <section class="section_h">
             <article class="section_article">
                 <h3 class="section_title">AVENTURA</h3>
-                <p class="section_text fw_bold">Trekking // Cavalgadas // Rapel // Arvorismo // Passeio de Veleiro // Expedição Aconcagua // Rafting // Voo de Helicóptero // Balão // Ski // Paraquedismo.</p>
+                <p class="section_text fw_bold">Trekking por montañas // Cabalgatas // Rapel // Expedición Aconcagua // Rafting // Paseo en Velero // Volar en Helicóptero o Globo Aerostático // Ski // Paracaidismo.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" class="adventure-img" src="../../img/adventure.jpg" alt="Collage fotográfico que muestra tres imágenes representativas de las actividades de turismo aventura que se pueden realizar en Mendoza, como caminatas de montaña, esquí y rafting.">
@@ -73,8 +73,8 @@
 
         <section class="section_h bg--camel">
             <article class="section_article">
-                <h3 class="section_title">GASTRONOMIA</h3>
-                <p class="section_text fw_bold">Gastronomia em Vinícolas // Olivícolas // Restaurantes Gourmet // Restaurantes Luxuosos // Restaurantes Tradicionais.</p>
+                <h3 class="section_title">GASTRONOMÍA</h3>
+                <p class="section_text fw_bold">Restaurantes en Bodegas, Montaña y Olivícolas // Restaurantes Gourmet // Restaurantes Lujosos // Restaurantes Tradicionales.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" src="../../img/gastronomy.jpg" alt="Collage fotográfico que muestra tres imágenes representativas de la oferta gastronómica mendocina.">
@@ -83,8 +83,8 @@
 
         <section class="section_h">
             <article class="section_article">
-                <h3 class="section_title">EXPERIÊNCIAS</h3>
-                <p class="section_text fw_bold">Spa days // Aguas Termais // Eventos Culturales // Circuitos de Compras // Dia da Noiva // Hospedagens Especiais: Hotéis 5 estrelas - Pousadas Boutique- Alojamentos Entre Vinhedos – Alojamento e Montanhas.</p>
+                <h3 class="section_title">EXPERIENCIAS</h3>
+                <p class="section_text fw_bold">Spa days // Aguas Termales // Eventos Culturales // Circuitos de Compra // Día de Novia // Hospedajes Especiales: Hoteles Lujosos - Posadas Boutique - Alojamiento Entre Viñedos y Montañas.</p>
             </article>
             <figure class="section_img_container">
                 <img class="section_img" src="../../img/experiences.jpg" alt="Collage fotográfico que muestra tres imágenes representativas de las experiencias que ofrece Mendoza.">
@@ -97,7 +97,7 @@
     </div>    
 
     <div class="whatsapp">
-        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
+        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Hola!" target="_blank">
             <img class="whatsapp_img" src="../../img/whatsapp.png" alt="Icono de Whatsapp">
         </a>
     </div>
